# variant-repack

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
configs/cupy/: pyproject.toml  variant_config.toml
configs/torch-2.10/: torch-2.10.0-variants.json  torch-2.9.0-variants.json  torch_pyproject.toml  torch_variant_config.toml  torchvision-0.25.0-variants.json
configs/torch-2.11/: torch_pyproject.toml  torch_variant_config.toml
configs/torch-2.8/: torch-2.8.0-variants.json  torch_pyproject.toml  torch_variant_config.toml  torchvision-0.23.0-variants.json
configs/torch-2.9/: torch-2.9.0-variants.json  torch_pyproject.toml  torch_variant_config.toml  torchvision-0.24.0-variants.json
tests/: test_build_helpers.py  test_create_index.py  test_dump_metadata.py
variant_repack/: __init__.py
variant_repack/commands/: build.py  create_index.py  dump_metadata.py  main.py
variant_repack/commands/templates/: index.j2
